<!DOCTYPE resources [
    <!ENTITY PC_ip_address_for_spring "192.168.0.35">
    ]>
<resources>

    <string name="app_name">GymNotes</string>
    <string name="settings_settings">Ustawienia</string>
    <string name="settings_about">O programie</string>
    <string name="detail_name">Opis</string>
    <string name="catalog_name">Katalog</string>
    <string name="diary_name">Dziennik</string>
    <string name="main_site_name">Dzisiejsze GymNotes</string>
    <string name="add_exercise">Dodaj ćwiczenie</string>

    <string name="drawer_first">Katalog</string>
    <string name="drawer_second">Trening</string>
    <string name="drawer_third">Dziennik</string>
    <string name="drawer_header">Użytkownik</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="about_creators"><b>Twórcy:</b> \nMateusz Cąkała, Piotr Jakubiak, Przemysław Czuba</string>
    <string name="about_mail"><b>Mail:</b> \npracowite.s@gmail.com</string>
    <string name="about_about"><b>O programie:</b>\nAplikacja trenigowa</string>
    <string name="about_version"><b>Wersja:</b>\n GymNotes, wersja 1.0</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Wyloguj</string>
    <string name="menu_delete">Usuń</string>

    <string name="list_item_exercises_series">Serie: </string>
    <string name="list_exercises_empty">Jeszcze dziś nie ćwiczyłeś, zrób coś z tym!</string>
    <string name="list_item_exercises_reps">Powtórzenia: </string>
    <string name="fragment_add_training_view_choose">Wybierz ćwiczenie</string>
    <string name="fragment_add_training_view_series">SERIE:</string>
    <string name="fragment_add_training_view_reps">POWTÓRZENIA:</string>
    <string name="fragment_add_training_view_save">ZAPISZ ĆWICZENIE</string>
    <string name="title_activity_login">Zaloguj się</string>
    <string name="header_activity_login">GymNotes</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Nazwa</string>
    <string name="prompt_password">Hasło</string>
    <string name="prompt_again_password">Powtórz hasło</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_register_new">Nie masz konta? Stwórz je teraz!</string>
    <string name="action_register">Zarejestruj</string>
    <string name="action_sign_in_short">Zaloguj</string>
    <string name="error_invalid_email">Adres email jest niepoprawny</string>
    <string name="error_invalid_password">Hasło za krótkie</string>
    <string name="error_invalid_match_password">Hasła są różne</string>
    <string name="error_incorrect_password">Hasło jest niepoprawne</string>
    <string name="error_field_required">Pole wymagane</string>
    <string name="error_wrong_login_or_pass">Zły login lub hasło</string>
    <string name="error_existing_login">Email jest już zajęty</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sync_account_type">gymnotes.wat.edu.pl</string>
    <string name="content_authority">pl.edu.wat.gymnotes.app</string>

    <string name="url_get_exercise_data">http://&PC_ip_address_for_spring;:8080/rest/exercise/all</string>
    <string name="url_get_user_data">http://&PC_ip_address_for_spring;:8080/rest/user/all</string>
    <string name="url_get_practice_data">http://&PC_ip_address_for_spring;:8080/rest/practice/all</string>
</resources>
