<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_activity"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/drawer_first" />
        <item
            android:id="@+id/nav_second_activity"
            android:checked="true"
            android:icon="?android:attr/actionModePasteDrawable"
            android:title="@string/drawer_second" />
        <item
            android:id="@+id/nav_third_activity"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/drawer_third" />
        <item
            android:id="@+id/nav_forth_activity"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/action_logout" />
    </group>
</menu>